--- a/boomtime/public/stylesheets/sass/main.sass
+++ b/boomtime/public/stylesheets/sass/main.sass
@@ -34,7 +34,7 @@ h2
   p, a
     display: inline
     font-size: 12px
-    color= !white
+    color= !dark_gray
     margin: 0
     padding: 10px
     
@@ -46,6 +46,7 @@ h2
       
   img
     padding: 6px
+    padding-top: 0
     margin-right: 10px
   
   p.left, p.right
@@ -65,6 +66,7 @@ h2
     text-align: right
     
   a.button
+    display: inline-block
     font-weight: bold
     color= !dark_gray
     padding: 1em
@@ -127,6 +129,10 @@ div.clear
       height: 22px
       padding: 2px
 
+// Hack to make the window appear with floated elements inside it.
+.clear
+  clear: both
+  
 // TODO: Good these up, embetter and embiggen
 // Error and notice styling
 .notification
